--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -2,14 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-
-
 <script th:replace="include :: jsdatetimepicker"></script>
 <link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:replace="include :: moment"></script>
-
-
 <script th:inline="javascript">
 const _csrf_token = /*[[${_csrf.token}]]*/ null;
 const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
@@ -149,7 +145,7 @@ $(document).ready(function() {
 				</tr>
 			</tbody>
 		</table>
-		<h6 th:text="#{PasDeHausse}" th:if="${#lists.isEmpty(detailsRecolte)}"></h6>
+		<h6 th:text="#{Pasdehausse}" th:if="${#lists.isEmpty(detailsRecolte)}"></h6>
 		<h6 th:text="#{haussesRecolte}"
 			th:unless="${#lists.isEmpty(detailsRecolte)}"></h6>
 		<table class="table table-sm table-bordered" id="hausses"
