--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -3,15 +3,18 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const listeRuches = /*[[#{listeRuches}]]*/ null;
+const buttontextprint = /*[[#{buttontextprint}]]*/ null;
+const buttontextcol = /*[[#{buttontextcol}]]*/ null;
 $(document).ready(function() {
     new DataTable('#recoltes', {
     	dom: 'Blftip',
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: [[#{listeRuches}]] + " " + (new Date()).toLocaleDateString()},
-            {extend: 'print', text: [[#{buttontextprint}]]},
-            {extend: 'colvis', text: [[#{buttontextcol}]]}
+	    		title: listeRuches + " " + (new Date()).toLocaleDateString()},
+            {extend: 'print', text: buttontextprint},
+            {extend: 'colvis', text: buttontextcol}
         ],
     	"order": [ [ 0, "desc" ] ]
     });
