--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/css/ruches.css}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/datatables-1.12.1/datatables.min.css}" />
+	th:href="@{/js/datatables-1.12.1_1/datatables.min.css}" />
 
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/images/bootstrap-icons-1.9.1/bootstrap-icons.css}" />
@@ -27,7 +27,7 @@
 <script th:src="@{/js/bootstrap-5.2.1/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/bootstrap-5.2.1/bootstrap.min.css}" />
-<script th:src="@{/js/datatables-1.12.1/datatables.min.js}"></script>
+<script th:src="@{/js/datatables-1.12.1_1/datatables.min.js}"></script>
 <script th:inline="javascript">
 	const urlValMessFr = /*[[@{/js/jquery.validate-1.19.5-messages_fr.min.js}]]*/null;
 	const urlDatatMessFr = /*[[@{/js/datatables_fr.json}]]*/null;
