--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -5,17 +5,18 @@
 <script th:inline="javascript">
 const _csrf_token = [[${_csrf.token}]];
 const _csrf_param_name = [[${_csrf.parameterName}]];
-const haussesnoms = /*[[${haussenoms}]]*/ null;
+const haussenoms = /*[[${haussenoms}]]*/ null;
 const recolteHausses = /*[[${recolteHausses}]]*/ null;
 const haussesupp = /*[[#{haussenonsupprimeerefrecolte}]]*/ null;
 const supphausseeve = /*[[#{supprimerhausseevenement}]]*/ null;
 const supphausse = /*[[#{supprimerhausse}]]*/ null;
 const nomhaussesv = /*[[#{nomhaussesvirgule}]]*/ null;
 const evenements = /*[[${evenements}]]*/ null;
-const urlclone = /*[@{/hausse/clone/}]]*/ null;
+const urlclone = /*[[@{/hausse/clone/}]]*/ null;
 const hausseid = /*[[${hausse.id}]]*/ null;
+const hausses = /*[[#{Hausses}]]*/ null;
+const creer = /*[[#{creer}]]*/ null;
 $().ready(function() {
-	let haussenoms = haussesnoms;
 	$('.confirmation').on('click', function () {
 		if(recolteHausses) {
 			alert(haussesupp);
@@ -46,12 +47,12 @@ $().ready(function() {
 				}
 			});
 			if (tabNomExiste.length > 0) {
-				let promptexistedeja = [[#{Hausses}]] + ' : ' + tabNomExiste.join(',') + ' ' + [[#{nomexistentdeja}]];
+				let promptexistedeja = hausses + ' : ' + tabNomExiste.join(',') + ' ' + [[#{nomexistentdeja}]];
 				if (tabNomOk.length == 0) {
 					alert(promptexistedeja);
 					return false;					
 				}
-				if (!confirm(promptexistedeja + '. ' + [[#{creer}]] + ' ' + tabNomOk.join(',') + ' ?')) {
+				if (!confirm(promptexistedeja + '. ' + creer + ' ' + tabNomOk.join(',') + ' ?')) {
 					return false;
 				}
 			}
@@ -81,21 +82,23 @@ $().ready(function() {
 				</h1>
 			</div>
 			<div class="col">
-				<a
-					th:href="@{'/hausse/evenement/remplissage/modifie/'+${hausse.id}}"
+				<a th:href="@{'/hausse/modifie/'+${hausse.id}}"
 					class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
-				&nbsp; <span id="clone" class="bi bi-collection cursorpointer"
-					th:title="#{cloner}" aria-hidden="true"></span> <a id="supprime"
+				&nbsp;
+				<span id="clone" class="bi bi-collection cursorpointer"
+					th:title="#{cloner}" aria-hidden="true">
+				</span>
+				<a id="supprime"
 					th:href="@{'/hausse/supprime/'+${hausse.id}}"
 					class="confirmation bi bi-trash" style="color: red"
-					th:title="#{supprimer}" aria-hidden="true"></a>&nbsp; <a
-					th:href="@{'/evenement/hausse/'+${hausse.id}}"
+					th:title="#{supprimer}" aria-hidden="true"></a>&nbsp;
+				<a th:href="@{'/evenement/hausse/'+${hausse.id}}"
 					class="padicons bi bi-list-ul" th:title="#{evenements}"
-					aria-hidden="true"></a> <a
-					th:href="@{'/evenement/hausse/commentaire/cree/'+${hausse.id}}"
+					aria-hidden="true"></a>
+				<a th:href="@{'/evenement/hausse/commentaire/cree/'+${hausse.id}}"
 					class="bi bi-chat-text" th:title="#{evenementCommentaire}"
-					aria-hidden="true"></a> <a
-					th:href="@{'/evenement/hausse/remplissage/cree/'+${hausse.id}}"
+					aria-hidden="true"></a>
+				<a th:href="@{'/evenement/hausse/remplissage/cree/'+${hausse.id}}"
 					class="bi bi-square-half" th:title="#{evenementRemplissage}"
 					aria-hidden="true"></a>
 			</div>
