--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -26,16 +26,16 @@
 					<th:block th:text="#{evenements}+ ' '"></th:block>
 					<a th:if="${rucheId}"
 						th:href="@{'/ruche/'+${rucheId}}"
-						th:text="#{ruche} + ' ' + ${evenements[0]?.ruche?.nom}"></a>
+						th:text="#{ruche} + ' ' + ${rucheNom}"></a>
 					<a th:if="${rucherId}"
 						th:href="@{'/rucher/'+${rucherId}}"
-						th:text="#{rucher} + ' ' + ${evenements[0]?.rucher?.nom}"></a>
+						th:text="#{rucher} + ' ' + ${rucherNom}"></a>
 					<a th:if="${essaimId}"
 						th:href="@{'/essaim/'+${essaimId}}"
-						th:text="#{essaim} + ' ' + ${evenements[0]?.essaim?.nom}"></a>
+						th:text="#{essaim} + ' ' + ${essaimNom}"></a>
 					<a th:if="${hausseId}"
 						th:href="@{'/hausse/'+${hausseId}}"
-						th:text="#{hausse} + ' ' + ${evenements[0]?.hausse?.nom}"></a>
+						th:text="#{hausse} + ' ' + ${hausseNom}"></a>
 				</h1>			
 			</div>
 			<th:block th:unless="${rucheId} or ${rucherId} or ${essaimId} or ${hausseId}">
