Passage à jakartaEE, tomcat 10 spring boot 3

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -207,8 +207,12 @@
 		</div>
 	</nav>
 	<footer th:fragment="footer">
+		<!--/* 
 		<small
 			th:text="#{include.footer} + ' Version ' + ${#servletContext.getAttribute('buildtime')}"></small>
+		*/-->	
+		<small
+			th:text="#{include.footer} + ' Version ' + ${servletCtxBuiltime}"></small>
 	</footer>
 </body>
 </html>
