--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -70,15 +70,16 @@
 <script th:fragment="jsol" th:src="@{/js/ol-6.15.1/ol.js}"></script>
 <link th:fragment="cssol" rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/ol-6.15.1/ol.css}" />
-
+	
+<!--/* th:data-key="${@environment.getProperty('ign.data.key')}" */-->
 <script th:fragment="jsGpPluginOpenLayers"
-	th:attr="data-url=@{/js/autoconf.js}"
-	th:src="@{/js/GpPluginOpenLayers-3.2.14/GpPluginOpenLayers.js}"></script>
+    th:attr="data-url=@{/js/autoconf.js}"
+	th:src="@{/js/GpPluginOpenLayers-3.2.17/GpPluginOpenLayers.js}"></script>
 <script th:fragment="jsGpOsmPluginOpenLayers"
-	th:src="@{/js/GpPluginOpenLayers-3.2.14/GpPluginOpenLayers.js}"></script>
+	th:src="@{/js/GpPluginOpenLayers-3.2.17/GpPluginOpenLayers.js}"></script>
 <link th:fragment="cssGpPluginOpenLayers" rel="stylesheet"
 	type="text/css" media="all"
-	th:href="@{/js/GpPluginOpenLayers-3.2.14/GpPluginOpenLayers.css}" />
+	th:href="@{/js/GpPluginOpenLayers-3.2.17/GpPluginOpenLayers.css}" />
 
 <script th:fragment="dom-to-image"
 	th:src="@{/js/dom-to-image-more.min-2.10.1.js}"></script>
