--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
+<link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:inline="javascript">
 	const complet = /*[[${complet}]]*/ null;
@@ -18,7 +19,9 @@
 				$(".ruches").hide();
 			}
 		});
-		$("#evenementForm").validate({
+		const form = $("#evenementForm");
+		const typ = $("#type");
+		form.validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
 			    error.insertBefore(element.closest('div'));
@@ -27,11 +30,40 @@
 				date : {
 					required : true
 				},
-				valeur : {
-					number : true
+				ruche : {
+					required : function(){	
+						return ['RUCHEAJOUTRUCHER', 'AJOUTESSAIMRUCHE', 'HAUSSEPOSERUCHE', 'HAUSSERETRAITRUCHE', 
+							'COMMENTAIRERUCHE']
+							.includes(typ.val());
+					}
+				},
+				rucher : {
+					required : function(){
+						return ['RUCHEAJOUTRUCHER', 'COMMENTAIRERUCHER']
+							.includes(typ.val());
+					}
+				},
+				essaim : {
+					required : function(){
+						return ['AJOUTESSAIMRUCHE', 'ESSAIMTRAITEMENT', 'ESSAIMTRAITEMENTFIN', 'ESSAIMSUCRE',
+							'COMMENTAIREESSAIM', 'ESSAIMDISPERSION', 'RUCHEPESEE', 'RUCHECADRE']
+							.includes(typ.val());
+					}
+				},
+				hausse : {
+					required : function(){
+						return ['HAUSSEPOSERUCHE' , 'HAUSSERETRAITRUCHE', 'HAUSSEREMPLISSAGE', 'COMMENTAIREHAUSSE']
+							.includes(typ.val());
+					}
 				}
 			}
 		});
+		/*[- */	 Pour trier les noms de types d'événements /* -]*/
+		const selOpt = typ.val();
+		typ.html($("#type option").sort(function(a, b) {
+			return a.text == b.text ? 0 : a.text < b.text ? -1 : 1;
+		})).val(selOpt);
+		typ.change(function() { form.valid(); });
 	});
 </script>
 </head>
@@ -54,10 +86,10 @@
 				</h1>
 			</div>
 			<div class="col">
-       			<span class="padicons">
-       			
-       				<input type="checkbox" id="showruches" th:title="#{afficherrucheetc}" th:text="#{afficherPlus}" />
-				
+				<span class="padicons"> <input type="checkbox"
+					id="showruches" th:title="#{afficherrucheetc}"
+					th:text="#{afficherPlus}" />
+
 				</span>
 			</div>
 		</div>
@@ -67,57 +99,47 @@
 		<input type="hidden" th:field="*{id}" />
 		<div th:replace="includeForm :: dateField"></div>
 		<div class="form-floating mb-3">
-			<input placeholder=""
-				class="form-control" type="number" step="0.001"
-				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" />
-			<label class="form-label" for="valeur" th:text="#{valeur}"></label>
+			<input placeholder="" class="form-control" type="number" step="0.001"
+				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" /> <label
+				class="form-label" for="valeur" th:text="#{valeur}"></label>
 		</div>
 		<div th:replace="includeForm :: commentaireField"></div>
-		<div class="form-floating mb-3 ruches"  style="display:none">
-			<select
-				class="form-control" th:field="*{type}">
+		<div class="form-floating mb-3 ruches" style="display: none">
+			<select class="form-control" th:field="*{type}">
 				<option
 					th:each="typeEvenement : ${T(ooioo.ruches.evenement.TypeEvenement).values()}"
 					th:value="${typeEvenement}" th:text="#{${typeEvenement}}"></option>
-			</select>
-			<label class="form-label" for="typeEvenement" th:text="#{typeEvenement}"></label>
+			</select> <label class="form-label" for="typeEvenement"
+				th:text="#{typeEvenement}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches"  style="display:none">
-			<select
-				class="form-control" th:field="*{ruche}">
+		<div class="form-floating mb-3 ruches" style="display: none">
+			<select class="form-control" th:field="*{ruche}">
 				<option th:text="#{aucune}" value=""></option>
 				<option th:each="rucheopt : ${ruches}" th:value="${rucheopt.id}"
 					th:text="${rucheopt.nom}"></option>
-			</select>
-			<label class="form-label" for="ruche" th:text="#{ruche}"></label>
+			</select> <label class="form-label" for="ruche" th:text="#{ruche}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches"  style="display:none">
-			<select
-				class="form-control" th:field="*{essaim}">
+		<div class="form-floating mb-3 ruches" style="display: none">
+			<select class="form-control" th:field="*{essaim}">
 				<option th:text="#{aucun}" value=""></option>
 				<option th:each="essaimopt : ${essaims}" th:value="${essaimopt.id}"
 					th:text="${essaimopt.nom}"></option>
-			</select>
-			<label class="form-label" for="essaim" th:text="#{essaim}"></label>
+			</select> <label class="form-label" for="essaim" th:text="#{essaim}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches"  style="display:none">
-			<select
-				class="form-control" th:field="*{rucher}">
+		<div class="form-floating mb-3 ruches" style="display: none">
+			<select class="form-control" th:field="*{rucher}">
 				<option th:text="#{aucun}" value=""></option>
 				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
 					th:text="${rucheropt.nom}"></option>
-			</select>
-			<label class="form-label" for="rucher" th:text="#{rucher}"></label>
+			</select> <label class="form-label" for="rucher" th:text="#{rucher}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches"  style="display:none">
-			<select
-				class="form-control" th:field="*{hausse}">
+		<div class="form-floating mb-3 ruches" style="display: none">
+			<select class="form-control" th:field="*{hausse}">
 				<option th:text="#{aucune}" value=""></option>
 				<option th:each="hausseopt : ${hausses}" th:value="${hausseopt.id}"
 					th:text="${hausseopt.nom}"></option>
-			</select>
-			<label for="hausse" th:text="#{hausse}"></label>
-		</div>		
+			</select> <label for="hausse" th:text="#{hausse}"></label>
+		</div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
