Icone transhumance. Accès direct à la doc.

--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -43,6 +43,9 @@
 					<a id="cree" th:href="@{/evenement/cree}"
 					  class="bi bi-plus-lg" th:title="#{evenementCree}" aria-hidden="true">
 	   				</a>
+   					<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc1568_1905309782}"
+				  		class="bi bi-book-half" th:title="#{Doc}" target="_blank" aria-hidden="true">
+				  	</a>
 				</div>
 				<div th:insert="includeForm :: evenementListeDates(retController='/evenement/liste')" class="col">
 				</div>
