--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -40,7 +40,7 @@ $(document).ready(function() {
 					th:href="@{/rucher/statistiques}" class="bi bi-table"
 					th:title="#{statistiquesruchers}" aria-hidden="true"></a> &nbsp; <a
 					th:href="@{'/rucher/historiques/true'}"
-					class="bi bi-calendar-check" th:title="#{transhumances}"
+					class="bi bi-truck-front" th:title="#{transhumances}"
 					aria-hidden="true"></a>
 			</div>
 		</div>
