--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -49,6 +49,10 @@ $().ready(function() {
 						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
 				</h1>
 			</div>
+			<div class="col">
+				<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3543_3352760186}"
+				  class="bi bi-book-half" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
+			</div>
 		</div>
 	</div>
 	<div class="container-fluid " id="ajouterRetirerRuches">
