--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -80,7 +80,7 @@
 				  class="bi bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a>  
 				&nbsp;
 				<a th:href="@{'/rucher/historique/'+${rucher.id}+'/true'}"
-				  class="bi bi-calendar-check" th:title="#{transhumances}" aria-hidden="true"></a>
+				  class="bi bi-truck-front" th:title="#{transhumances}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
