Contrôles serveur sur unicité login et email

--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -51,7 +51,7 @@ $().ready(function() {
 			</div>
 			<div class="col">
 				<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3543_3352760186}"
-				  class="bi bi-book-half" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
+				  class="bi bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
