--- a/src/main/resources/templates/ruche/rucheAjoutRetrait.html
+++ b/src/main/resources/templates/ruche/rucheAjoutRetrait.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="col">
 				<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3802_3476563104}"
-				  class="bi bi-book-half" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
+				  class="bi bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
