Admin/tests historique ruche correction lien vers ruche

--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -160,7 +160,7 @@
 				</thead>
 				<tbody>
 					<tr th:each="ruche : ${rucheNonVide}">
-						<td><a th:href="@{'/rucher/'+${ruche.id}}"
+						<td><a th:href="@{'/ruche/'+${ruche.id}}"
 						th:text="${ruche.nom}"></a></td>
 					</tr>
 				</tbody>
