--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -27,9 +27,12 @@
 				</h1>
 			</div>
 			<div class="col">
-				<span class="padicons"> <input type="checkbox" id="groupe"
-					th:title="#{grouper}" th:checked="${group}" /> <label for="groupe"
-					th:text="#{grouper}"></label>
+				<a
+					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3834_3476563104}"
+					class="bi bi-book" th:title="#{Doc}" target="_blank"
+					aria-hidden="true"></a> <span class="padicons"> <input
+					type="checkbox" id="groupe" th:title="#{grouper}"
+					th:checked="${group}" /> <label for="groupe" th:text="#{grouper}"></label>
 				</span>
 			</div>
 		</div>
