--- a/src/main/resources/templates/rucher/rucherStatistiques.html
+++ b/src/main/resources/templates/rucher/rucherStatistiques.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const buttontextprint = /*[[#{buttontextprint}]]*/null;
+const buttontextcol = /*[[#{buttontextcol}]]*/null;
+const listeRuchers = /*[[#{listeRuchers}]]*/null;
 $(document).ready(function() {
 	$('.bi-question-lg').popover({
         html: true
@@ -14,9 +17,9 @@ $(document).ready(function() {
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: [[#{listeRuchers}]] + " " + (new Date()).toLocaleDateString()},
-	        {extend: 'print', text: [[#{buttontextprint}]]},
-	        {extend: 'colvis', text: [[#{buttontextcol}]]}
+	    		title: listeRuchers + " " + (new Date()).toLocaleDateString()},
+	        {extend: 'print', text: buttontextprint},
+	        {extend: 'colvis', text: buttontextcol}
         ]
     });
 } );
