--- a/src/main/resources/templates/ruche/rucheTypesListe.html
+++ b/src/main/resources/templates/ruche/rucheTypesListe.html
@@ -3,15 +3,18 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+const rucheTypes = /*[[#{rucheTypes}]]*/ null;
 $(document).ready(function() {
     new DataTable('#ruches', {
         dom: 'Blftip',
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: [[#{rucheTypes}]] + " " + (new Date()).toLocaleDateString()},
-	            {extend: 'print', text: [[#{buttontextprint}]]},
-	            {extend: 'colvis', text: [[#{buttontextcol}]]}
+	    		title: rucheTypes + " " + (new Date()).toLocaleDateString()},
+	            {extend: 'print', text: buttTxtPrint},
+	            {extend: 'colvis', text: buttTxtCol}
          ]
        });    
 });
