--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -2,15 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+const listeRuches = /*[[#{listeRuches}]]*/ null;
 $(document).ready(function() {
     new DataTable('#ruches', {
         dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}, 
-	    		title: [[#{listeRuches}]] + " " + (new Date()).toLocaleDateString()},
-	        {extend: 'print', text: [[#{buttontextprint}]], exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}},
-	        {extend: 'colvis', text: [[#{buttontextcol}]]}
+	    		title: listeRuches + " " + (new Date()).toLocaleDateString()},
+	        {extend: 'print', text: buttTxtPrint, exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}},
+	        {extend: 'colvis', text: buttTxtCol}
          ]
        });    
 });
