--- a/src/main/resources/templates/ruche/ruchesListeRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListeRucher.html
@@ -2,15 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+const listeRuches = /*[[#{listeRuches}]]*/ null;
 $(document).ready(function() {
     new DataTable('#ruches', {
         dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: [[#{listeRuches}]] + " " + (new Date()).toLocaleDateString()},
-            {extend: 'print', text: [[#{buttontextprint}]]},
-            {extend: 'colvis', text: [[#{buttontextcol}]]}
+	    		title: listeRuches + " " + (new Date()).toLocaleDateString()},
+            {extend: 'print', text: buttTxtPrint},
+            {extend: 'colvis', text: buttTxtCol}
         ]
     });
 });
