--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -36,6 +36,7 @@
 	const ruchesurl = /*[[@{/}]]*/ null;
 	const _csrf_token = /*[[${_csrf.token}]]*/ null;
 	const dessinEnregistretxt = /*[[#{dessinEnregistre}]]*/ null;
+	const ignCarteLiscense = /*[[${ignCarteLiscense}]]*/ null;
 	window.onload = function () {
  		rucherDetail(true); 			
 	}
