--- a/src/main/resources/templates/rucher/ruchersListeIgn.html
+++ b/src/main/resources/templates/rucher/ruchersListeIgn.html
@@ -16,6 +16,7 @@
 	const pleinecrantxt = /*[[#{pleinecran}]]*/ null;
 	const urlruches = /*[[@{/}]]*/ null;
 	const _csrf_token = /*[[${_csrf.token}]]*/ null;
+	const ignCarteLiscense = /*[[${ignCarteLiscense}]]*/ null;
 	window.onload = function () {
 		rucherListeIgn(true); 			
 	}
